tests/rosetta/out/Swift/chaos-game.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:57:08Z
let width = 60
let height = Int((Double(width) * 0.86602540378))
let iterations = 5000
var grid: [[String]] = [Any]()
var y = 0
while y < height {
    var line: [String] = [Any]()
    var x = 0
    while x < width {
        line = line + [" "]
        x = x + 1
    }
    grid = grid + [line]
    y = y + 1
}
func randInt(_ s: Int, _ n: Int) -> [Int] {
    let next = (s * 1664525 + 1013904223) % 2147483647
    return [next, next % n]
}
var seed = 1
var vertices: [[Int]] = [[0, height - 1], [width - 1, height - 1], [Int((width / 2)), 0]]
var px = Int((width / 2))
var py = Int((height / 2))
var i = 0
while i < iterations {
    var r = randInt(seed, 3)
    seed = r[0]
    let idx = Int(r[1])
    let v = vertices[idx]
    px = Int(((px + v[0]) / 2))
    py = Int(((py + v[1]) / 2))
    if px >= 0 && px < width && py >= 0 && py < height {
        grid[py][px] = "*"
    }
    i = i + 1
}
y = 0
while y < height {
    var line = ""
    var x = 0
    while x < width {
        line = line + grid[y][x]
        x = x + 1
    }
    print(line)
    y = y + 1
}
